fixed tablet design alignment

--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -566,25 +566,61 @@ body.light {
         gap: 2rem;
     }
 
-    #profile-picture {
+    /* #profile-picture {
         margin-top: 2rem;
-    }
+    } */
 
     .main-info {
-        flex-direction: column;
+        flex-direction: row;
         justify-content: space-evenly;
     }
 
-    .main-info>div {
+    /* .main-info>div {
         text-align: left;
     }
 
     .main-info>div:nth-child(2)>p {
         margin: 0;
+    } */
+
+    .main-info>div {
+        text-align: left;
+    }
+
+    .main-info div:nth-child(1) {
+        width: 60%;
+    }
+
+    .main-info div:nth-child(2) {
+        width: 40%;
+        margin-top: 2rem;
+    }
+
+    .main-info div:nth-child(3) {
+        width: 100%;
+    }
+
+    /* .main-info>div:nth-child(2) {
+        margin-top: 0;
+    } */
+
+    .main-info>div:nth-child(2)>p {
+        margin: 0;
+        text-align: right;
+        padding-right: 1.1rem;
+    }
+
+    .main-info>div:nth-child(3)>p {
+        margin-top: 1.5rem;
     }
 
     .right {
         width: 85%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        margin-right: 0;
+        align-self: auto;
     }
 
     .contacts {
